some logic for products number

--- a/views/AddProduct.ejs
+++ b/views/AddProduct.ejs
@@ -70,8 +70,13 @@
                                 </div>
                                 <div class="col-12 py-2">
                                     <label for="price" class="form-label">Price <span class="text-muted"></span></label>
-                                    <input type="Number" class="form-control border" id="email" placeholder="EG 0.00"
+                                    <input type="Number" class="form-control border" id="price" placeholder="EG 0.00"
                                         name="price" required>
+                                </div>
+                                <div class="col-12 py-2">
+                                    <label for="pieces" class="form-label">Number Of Pieces <span class="text-muted"></span></label>
+                                    <input type="Number" class="form-control border" id="pieces" placeholder="0"
+                                        name="pieces" required>
                                 </div>
                                 <div class="row col-12 py-2">
                                     <div class="col-md-5">
