--- a/public/css/customStyle.css
+++ b/public/css/customStyle.css
@@ -36,7 +36,7 @@
 
 
 
-/* some style in cart page */
+/* style in cart page */
 .smallBox{
   border: 4px solid gold;
   border-radius: 10px;
@@ -45,6 +45,19 @@
   text-align: center;
 }
 
+
+/* style in product page */
+.err_msg{
+  text-align: center;
+  background-color: #ff1500c0;
+  color: #fff;
+  padding: 5px 50px;
+  border-radius: 10px;
+}
+
+.hidden{
+  display: none;
+}
 
 
 /* carousel */
