--- a/views/PersonalProfile.ejs
+++ b/views/PersonalProfile.ejs
@@ -57,30 +57,30 @@
             <p class="h3 my-3">General Information</p>
             <div class="d-flex mt-2">
                 <label for="firstName" name="fname" class="form-label col-3">First name</label>
-                <input type="text" class="form-control " value="<%= user.fname %>">
-                <i class="bi bi-pencil-square mt-4 editfield"></i>
+                <input type="text" class="form-control " disabled value="<%= user.fname %>">
+                <!-- <i class="bi bi-pencil-square mt-4 editfield"></i> -->
             </div>
             <div class="d-flex mt-2">
                 <label for="lastName" name="fname" class="form-label col-3">Last name</label>
-                <input type="text" class="form-control " value="<%= user.lname %>">
-                <i class="bi bi-pencil-square mt-4 editfield"></i>
+                <input type="text" class="form-control " disabled value="<%= user.lname %>">
+                <!-- <i class="bi bi-pencil-square mt-4 editfield"></i> -->
             </div>
             <div class="d-flex mt-2">
                 <label for="Email" name="fname" class="form-label col-3">Email Address</label>
-                <input type="email" class="form-control " value="<%= user.email %>">
-                <i class="bi bi-pencil-square mt-4 editfield"></i>
+                <input type="email" class="form-control " disabled value="<%= user.email %>">
+                <!-- <i class="bi bi-pencil-square mt-4 editfield"></i> -->
             </div>
             <div class="d-flex mt-2">
                 <label for="passowrd" class="form-label col-3">Password</label>
-                <input type="password" class="form-control " value="xxxxxxxxxxxx">
-                <i class="bi bi-pencil-square mt-4 editfield"></i>
+                <input type="password" class="form-control " disabled value="xxxxxxxxxxxx">
+                <!-- <i class="bi bi-pencil-square mt-4 editfield"></i> -->
             </div>
             <div class="d-flex mt-2">
                 <label for="number" class="form-label col-3">Phone Number</label>
-                <input type="number" class="form-control " value="<%= user.phoneNumber %>">
-                <i class="bi bi-pencil-square mt-4 editfield"></i>
+                <input type="number" class="form-control " disabled value="<%= user.phoneNumber %>">
+                <!-- <i class="bi bi-pencil-square mt-4 editfield"></i> -->
             </div>
-            <a href="#" class="nav-link mt-3">Save Changes</a>
+            <!-- <a href="#" class="nav-link mt-3">Save Changes</a> -->
             <hr>
             <div class="d-flex mt-4">
                 <label for="firstName" class="form-label col-3 ">Address</label>
