--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -4,7 +4,7 @@
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <link rel="stylesheet" href="css/cart.css">
     <link rel="stylesheet" href="css/customStyle.css">
-    <!-- <link rel="stylesheet" href="../CSS files/HomePage.css">    -->
+    <!-- <link rel="stylesheet" href="../CSS files/HomePage.css">  -->
     <!-- <link rel="stylesheet" href="../CSS files/Searching.css"> -->
     </head>
 
@@ -33,6 +33,7 @@
                 </nav>
             </div>
             <!-- The Body of the page  -->
+            <% var total_price = 0 %>
             <div class="row mt-3">
                 <div class="col-1"></div>
                 <div class="itemsContainer col">
@@ -43,6 +44,7 @@
                         </div>
                     <% }else { %>
                         <% user.cart.forEach( item=> { %>
+                            <% total_price += item.product.price %>
                             <form action="/removeFromCart" method="post" id="<%= item._id %>">
                                 <div class="col mb-3 cartproducts border py-3">
                                     <div class="d-flex">
@@ -74,7 +76,9 @@
                                     </div>
                                 </div>
                             </form>
+
                         <% }); %>
+                        <input type="hidden" name="total_price" value="<%= total_price %>">
                     <% } %>
                 </div>
                 <div class="col col-lg-3 mx-lg-5 border checkout pt-3" style="height: fit-content; width: fit-content;">
@@ -124,7 +128,11 @@
                             </div>
                         </div>
                     </div>
-                    <a href="/checkOut" class="btn btn-success col py-3 my-3 btncheckout">Continue to checkout</a>
+                    
+                    <form action="/checkOut" method="post">
+                        <input type="hidden" name="total_price" value="<%= total_price %>">
+                        <button type="submit" class="btn btn-success col py-3 my-3 btncheckout">Continue to checkout</button>
+                    </form>
                 </div>
             </div>
 
