--- a/public/css/customStyle.css
+++ b/public/css/customStyle.css
@@ -40,9 +40,10 @@
 .smallBox{
   border: 4px solid gold;
   border-radius: 10px;
-  width: 70px;
+  width: fit-content;
   height: fit-content;
   text-align: center;
+  padding:5px 20px 5px 20px;
 }
 
 
@@ -66,6 +67,12 @@
   display: none;
 }
 
+/* style in inventory page */
+.inventory_header{
+  color: rgb(12, 12, 139);
+  margin: 3rem auto 1rem auto;
+  text-align: center;
+  }
 
 /* carousel */
 .carousel {
