--- a/views/navigation_bar.ejs
+++ b/views/navigation_bar.ejs
@@ -123,7 +123,7 @@
                     onclick="window.location.href='/main'">Home Page</button>
                 <% if (user.admin == true){ %>
                     <li><a class="dropdown-item h5" href="/addProduct">Add Product</a></li>
-                    <li><a class="dropdown-item h5" href="/statics">Statics</a></li>
+                    <li><a class="dropdown-item h5" href="/inventory">Statics</a></li>
                 <% } %>
                 <li><a class="dropdown-item h5" href="/cart">View cart</a></li>
                 <li><a class="dropdown-item h5" href="/profile">Your Profile</a></li>
