inventory page color

--- a/views/inventory.ejs
+++ b/views/inventory.ejs
@@ -10,8 +10,8 @@
     <h1 class="inventory_header">Total Cash</h1>
     <h1 class="smallBox mb-5 " style="margin: auto;"><%= cash %></h1>
     <div class="container">
-        <table class="table">
-            <thead>
+        <table class="table table-info">
+            <thead class="table-dark">
             <tr>
                 <th scope="col">#</th>
                 <th scope="col">Product Name</th>
