adding edit product page

--- a/views/ProductPage.ejs
+++ b/views/ProductPage.ejs
@@ -1,4 +1,4 @@
-<%- include("header.ejs") -%>
+<%- include("partials/header.ejs") -%>
     <link rel="stylesheet" href="css/MainCssFiles.css">
     <link rel="stylesheet" href="css/ProductPage.css">
     <link rel="stylesheet" href="css/customStyle.css">
@@ -9,7 +9,7 @@
     </head>
 
     <body id="body-pd">
-        <%- include("navigation_bar.ejs") -%>
+        <%- include("partials/navigation_bar.ejs") -%>
 
 
             <!--Container Main start-->
@@ -195,7 +195,7 @@
                 <hr>
 
 
-                <%- include("footer.ejs") -%>
+                <%- include("partials/footer.ejs") -%>
                     <script type='text/Javascript' src="searching.js"></script>
                     <script type='text/Javascript' src="productPage.js"></script>
     </body>
