--- a/views/SignIn.ejs
+++ b/views/SignIn.ejs
@@ -1,4 +1,4 @@
-<%- include("header.ejs") -%>
+<%- include("partials/header.ejs") -%>
     <link rel="stylesheet" href="css/MainCssFiles.css">
     <!-- <link rel="stylesheet" href="../CSS files/HomePage.css">    -->
     <!-- <link rel="stylesheet" href="../CSS files/Searching.css"> -->
@@ -6,7 +6,7 @@
 
     <body id="body-pd">
         <!-- Side bar -->
-        <%- include("navigation_bar.ejs") -%>
+        <%- include("partials/navigation_bar.ejs") -%>
 
             <!-- Side Bar -->
 
@@ -80,7 +80,7 @@
 
 
 
-            <%- include("footer.ejs") -%>
+            <%- include("partials/footer.ejs") -%>
                 <script type='text/Javascript' src="searching.js"></script>
     </body>
 
