--- a/views/partials/carousel.ejs
+++ b/views/partials/carousel.ejs
@@ -4,7 +4,7 @@
       <input type="radio" name="radio-buttons" id="img-1" checked />
       <li class="slide-container">
         <div class="slide-image">
-          <img src="http://orgalive.in/assets/images/product/p.jpg">
+          <img src="https://www.thepackagingcompany.us/knowledge-sharing/wp-content/uploads/sites/2/2020/09/5-Packaging-Tips-for-Selling-Products-Online-e1599060286874-1026x675.jpg">
         </div>
         <!-- <div class="carousel-controls">
                 <label for="img-3" class="prev-slide">
@@ -18,8 +18,7 @@
       <input type="radio" name="radio-buttons" id="img-2" />
       <li class="slide-container">
         <div class="slide-image">
-          <img
-            src="https://www.thepackagingcompany.us/knowledge-sharing/wp-content/uploads/sites/2/2020/09/5-Packaging-Tips-for-Selling-Products-Online-e1599060286874-1026x675.jpg">
+          <img src="https://img.jakpost.net/c/2017/03/15/2017_03_15_23480_1489559147._large.jpg">
         </div>
         <!-- <div class="carousel-controls">
                 <label for="img-1" class="prev-slide">
@@ -33,7 +32,7 @@
       <input type="radio" name="radio-buttons" id="img-3" />
       <li class="slide-container">
         <div class="slide-image">
-          <img src="https://img.jakpost.net/c/2017/03/15/2017_03_15_23480_1489559147._large.jpg">
+          <img src="http://orgalive.in/assets/images/product/p.jpg">
         </div>
         <!-- <div class="carousel-controls">
                 <label for="img-2" class="prev-slide">
