--- a/views/PersonalProfile.ejs
+++ b/views/PersonalProfile.ejs
@@ -1,4 +1,4 @@
-<%- include("header.ejs") -%>
+<%- include("partials/header.ejs") -%>
     <link rel="stylesheet" href="css/MainCssFiles.css">
     <link rel="stylesheet" href="css/ProductPage.css">
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
@@ -9,7 +9,7 @@
 
 <body id="body-pd">
     <!-- Side bar -->
-    <%- include("navigation_bar.ejs") -%>
+    <%- include("partials/navigation_bar.ejs") -%>
 
     <!-- Side Bar -->
 
@@ -124,7 +124,7 @@
 
 
 
-    <%- include("footer.ejs") -%>
+    <%- include("partials/footer.ejs") -%>
     <script type='text/Javascript' src="searching.js"></script>
 </body>
 
