--- a/views/SignUP.ejs
+++ b/views/SignUP.ejs
@@ -1,4 +1,4 @@
-<%- include("header.ejs") -%>
+<%- include("partials/header.ejs") -%>
     <link rel="stylesheet" href="css/MainCssFiles.css">
     <link rel="stylesheet" href="css/customStyle.css">
     <!-- <link rel="stylesheet" href="../CSS files/HomePage.css">  -->
@@ -7,7 +7,7 @@
 
 <body id="body-pd">
     <!-- Side bar -->
-    <%- include("navigation_bar.ejs") -%>
+    <%- include("partials/navigation_bar.ejs") -%>
 
         <!-- Side Bar -->
 
@@ -171,7 +171,7 @@
 
 
 
-        <%- include("footer.ejs") -%>
+        <%- include("partials/footer.ejs") -%>
             <script type='text/Javascript' src="searching.js"></script>
 </body>
 
