--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -1,4 +1,4 @@
-<%- include("header.ejs") -%>
+<%- include("partials/header.ejs") -%>
     <link rel="stylesheet" href="css/MainCssFiles.css">
     <link rel="stylesheet" href="css/ProductPage.css">
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
@@ -9,7 +9,7 @@
     </head>
 
     <body id="body-pd">
-        <%- include("navigation_bar.ejs") -%>
+        <%- include("partials/navigation_bar.ejs") -%>
 
 
             <!--Container Main start-->
@@ -44,7 +44,7 @@
                         </div>
                     <% }else { %>
                         <% user.cart.forEach( item=> { %>
-                            <% total_price += item.product.price %>
+                            <% total_price += item.product.price*item.number %>
                             <form action="/removeFromCart" method="post" id="<%= item._id %>">
                                 <div class="col mb-3 cartproducts border py-3">
                                     <div class="d-flex">
@@ -138,7 +138,7 @@
 
 
 
-            <%- include("footer.ejs") -%>
+            <%- include("partials/footer.ejs") -%>
                 <script type='text/Javascript' src="searching.js"></script>
     </body>
 
